objects/Log__c.object
<CustomObject>
    <description>Custom Log Table to house errors, warnings, and any other types of messages or details.

Primarily created to house apex errors as they occur.</description>
    <fields>
        <fullName>Component_Name__c</fullName>
        <description>Component that raised the message</description>
        <label>Component Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Message from Exception Handler</description>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Log Message</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of Message</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Message Stack Trace</description>
        <label>Stack Trace</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Dev Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Source__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Message__c</columns>
        <columns>Exception_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Source__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Message__c</columns>
        <columns>Exception_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Component_Name__c</field>
            <operation>notEqual</operation>
            <value>ServiceMulesoft</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>checkFieldFilter_Null_Issue</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Source__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Message__c</columns>
        <columns>Exception_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Component_Name__c</field>
            <operation>equals</operation>
            <value>TriggerHandler</value>
        </filters>
        <label>checkFieldFilter Null Issue</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Logs</pluralLabel>
    <recordTypes>
        <fullName>Debug</fullName>
        <active>true</active>
        <description>Debug</description>
        <label>Debug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error</fullName>
        <active>true</active>
        <description>Error</description>
        <label>Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>Info</fullName>
        <active>true</active>
        <description>Info</description>
        <label>Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Warning</fullName>
        <active>true</active>
        <description>Warning</description>
        <label>Warning</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>